--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-pino-logger": "^5.0.0",
     "express-swagger-generator": "^1.1.17",
     "helmet": "^4.1.1",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
+    "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-cookie": "^1.0.8",
     "pino": "^6.7.0",
