--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "pm2-runtime start ecosystem.config.js --env production",
     "dev": "docker-compose up",
     "build:docker": "docker-compose build",
-    "test": "jest --coverage",
+    "test": "jest",
+    "test:dev": "docker-compose -f docker-compose.test.yml up",
     "test:report": "sensible-browser coverage/index.html",
     "lint": "standard",
     "lint:fix": "prettier --write '{*.js,src/**/*.js}' && standard --fix src"
@@ -52,10 +53,6 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "collectCoverage": true,
-    "coverageReporters": [
-      "html"
-    ],
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ]
