--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.8",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.12",
     "passport": "^0.4.1",
     "passport-cookie": "^1.0.8",
     "pino": "^6.7.0",
