--- a/.github/workflows/terapi-schedule.yaml
+++ b/.github/workflows/terapi-schedule.yaml
@@ -11,7 +11,7 @@ jobs:
         ports:
           - 27017:27017
     env:
-      DB_URL: mongodb://db:27017/terapischedule
+      DB_URL: mongodb://localhost:27017/terapischedule
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
