--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "pm2-runtime start ecosystem.config.js --env production",
     "dev": "docker-compose up",
     "build:docker": "docker-compose build",
-    "test": "jest",
+    "test": "jest --detectOpenHandles --forceExit",
     "test:dev": "docker-compose -f docker-compose.test.yml up",
     "test:report": "sensible-browser coverage/index.html",
     "lint": "standard",
