Fix: mongo port for dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - db
   db:
     container_name: db
+    ports:
+      - 27017:27017
     image: mongo:4.4
     restart: always
     volumes:
